--- a/index.html
+++ b/index.html
@@ -100,34 +100,33 @@
     
     @media (min-width:1350px) {
       body {
-        font-size: 150%;
+        font-size: 1.5rem;
       }
       header {
-        padding-left: 2.5%;
+        padding-left: 2.5rem;
         text-align: left;
       }
-      header li {
-        padding: .5rem;
-      }
       header li:nth-of-type(3) {
-        padding: 0;
         border: none;
       }
       h1 {
         width: 20rem;
       }
       p {
-        font-size: 70%;
+        font-size: 1.1rem;
       }
     }
     
     @media (min-width:1900px) {
       body {
-        font-size: 300%;
+        font-size: 2.5rem;
       }
       h1 {
-        width: 35rem;
-        font-size: 150%;
+        width: 30rem;
+        font-size: 4rem;
+      }
+      p {
+        font-size: 1.9rem;
       }
     }
   </style>
