--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     
     @media (min-width:1900px) {
       body {
-        font-size: 2.5rem;
+/*        font-size: 2.5rem;*/
+        font-size: 40px;
       }
       h1 {
         width: 30rem;
@@ -195,5 +196,5 @@
 <!--an OCD design-->
 
 <!--! validate HTML & CSS-->
-<!--test w/ real hardware w/ +- resolution-->
-<!--! fix responsive font size & padding-->
+<!--test w/ real hardware ? w/ +- resolution-->
+<!--! ++ font-size: Xpx-->
