--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
       }
     }
     
-    @media (min-width:1900px) {
+    @media (min-width:2550px) {
       body {
-/*        font-size: 2.5rem;*/
-        font-size: 40px;
+        font-size: 2.5rem;
       }
       h1 {
         width: 30rem;
@@ -197,4 +196,3 @@
 
 <!--! validate HTML & CSS-->
 <!--test w/ real hardware ? w/ +- resolution-->
-<!--! ++ font-size: Xpx-->
